# MSI3_Projet2

./: .gitignore  README.md
PoissonCuda/: implementation_plan.md.resolved
PoissonCuda/src/: CMakeLists.txt
PoissonCuda/src/cuda/: dim.cu  iteration.cu  user.cu
PoissonKokkos/: build.py  results.txt
PoissonKokkos/kokkos/src/.gitlab/: hpsf-gitlab-ci.yml
PoissonKokkos/src/: CMakeLists.txt  main.cxx  paramKokkos.hxx  parameters.cxx  parameters.hxx  scheme.cxx  scheme.hxx  user.hxx  values.cxx  values.hxx
PoissonKokkos/src/common/: arguments.cxx  timer.cxx  type.hxx
PoissonMetal/: build.py  results.txt
PoissonMetal/src/: CMakeLists.txt  dim.hxx  iteration.hxx  main.cxx  parameters.cxx  parameters.hxx  precision.hxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx
PoissonMetal/src/common/: arguments.cxx  timer.cxx
PoissonMetal/src/metal/: SharedStructs.h  context.cxx  context.hxx  dim_metal.cxx  iteration.cxx  iteration_metal.cxx  kernels.metal  memmove_metal.cxx  metal_implementation.cxx  user.h  values_metal.cxx  variation_metal.cxx
PoissonMetal/src/metal_cxx/: iteration.cxx
PoissonMetal/src/shaders/: dim.metal
PoissonMetalXcode/PoissonMetalXcode/: dim.hxx  memmove.hxx  mtl_implementation.cpp  parameters.cxx  scheme.cxx  scheme.hxx  values.cxx  values.hxx  variation.hxx  version.hxx
PoissonMetalXcode/PoissonMetalXcode.xcodeproj/: project.pbxproj
PoissonMetalXcode/PoissonMetalXcode.xcodeproj/project.xcworkspace/xcuserdata/clementbaillet.xcuserdatad/: UserInterfaceState.xcuserstate
PoissonMetalXcode/PoissonMetalXcode.xcodeproj/xcshareddata/xcschemes/: PoissonMetalXcode.xcscheme
PoissonMetalXcode/PoissonMetalXcode.xcodeproj/xcuserdata/clementbaillet.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PoissonMetalXcode/PoissonMetalXcode.xcodeproj/xcuserdata/clementbaillet.xcuserdatad/xcschemes/: xcschememanagement.plist
PoissonMetalXcode/PoissonMetalXcode/common/: timer.hxx
PoissonMetalXcode/PoissonMetalXcode/metal/: Context.cxx  Context.hxx  SharedStructs.h  dim_metal.cxx  iteration_metal.cxx  kernels.metal  memmove_metal.cxx  values_metal.cxx  variation_metal.cxx
PoissonSeq/: .clangd  build.py
PoissonSeq/src/: CMakeLists.txt
PoissonSeqXcode/PoissonSeqXcode.xcodeproj/: project.pbxproj
PoissonSeqXcode/PoissonSeqXcode.xcodeproj/project.xcworkspace/xcuserdata/clementbaillet.xcuserdatad/: UserInterfaceState.xcuserstate
PoissonSeqXcode/PoissonSeqXcode.xcodeproj/xcuserdata/clementbaillet.xcuserdatad/xcschemes/: xcschememanagement.plist
compte-rendu/: marche_a_suivre.md  rapport.fdb_latexmk  rapport.fls  rapport_clement_baillet.aux  rapport_clement_baillet.fdb_latexmk  rapport_clement_baillet.fls  rapport_clement_baillet.tex
